test/spec_vectors/block/fail/module_163.wat
(module (func $type-param-nested-void-vs-num (block (block (param i32) (drop)))))